# Aulas-C

./: CMakeLists.txt
Filas/: queues1.0.c
ListasEncadeadas/: ListaEncadeada.c
Pilhas/: Pilhas1.0.c
Ponteiros/: ponteiros1.0.c  ponteiros2.0.c  ponteiros3.0.c  ponteiros3.1.c  teste.c
Stacks/: Pilhas1.0.c
